--- a/FRONTEND/views/QT_DESIGNS/designs/main.ui
+++ b/FRONTEND/views/QT_DESIGNS/designs/main.ui
@@ -87,6 +87,9 @@
         </item>
         <item>
          <layout class="QHBoxLayout" name="searchRecordLayout">
+          <property name="spacing">
+           <number>20</number>
+          </property>
           <item>
            <widget class="QLineEdit" name="searchLineEdit">
             <property name="sizePolicy">
@@ -124,6 +127,7 @@
     font-size: 18px;
     text-align: left;
 padding-left: 10px;
+color:#000000;
 }
 
 </string>
@@ -143,6 +147,52 @@ padding-left: 10px;
             <property name="clearButtonEnabled">
              <bool>true</bool>
             </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="comboBox">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>140</width>
+              <height>32</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>140</width>
+              <height>32</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">QComboBox {
+	border: 2px rounded;
+    border-radius: 8px;
+    border-style: outset;   
+	border-color: rgb(57, 57, 57);
+    padding: 5px 18px 5px 5px;   
+	background-color:#ffffff;
+     color:#000000;
+}
+
+QComboBox QAbstractItemView::item{
+	background-color: #ffffff; 
+}
+
+QComboBox QAbstractItemView::item:hover {
+    color: #ffffff;
+}</string>
+            </property>
+            <item>
+             <property name="text">
+              <string>Seleccionar</string>
+             </property>
+            </item>
            </widget>
           </item>
           <item>
@@ -260,13 +310,14 @@ QPushButton:pressed {
             <property name="styleSheet">
              <string notr="true">background:#ffffff;
 border:1px rounded;
-border-radius: 10px;</string>
+border-radius: 10px;
+color:#000000;</string>
             </property>
             <property name="midLineWidth">
              <number>-1</number>
             </property>
             <property name="text">
-             <string>ADICIONAR - BUSCAR - MANIPULAR REGISTROS POR INDEPENDIENTE</string>
+             <string>MANIPULAR USUARIOS REGISTRADOS</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -350,57 +401,6 @@ QPushButton:pressed {
               <width>20</width>
               <height>20</height>
              </size>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="crud_searchPushButton">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>95</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>95</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="toolTip">
-             <string>Buscar usuario</string>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QPushButton{
-	padding: 0px 10px 0px 10px;
-    background: #e0d1bd;
-    color: #232323;
-	border:1px rounded #232323;
-    border-radius: 10px;
-    border-style: outset;
-}
-
-QPushButton:hover {
-    background-color:rgb(187, 179, 155);
-    }
-
-QPushButton:pressed {
-    border-style: inset;
-    background: rgb(214, 218, 218);
-    }</string>
-            </property>
-            <property name="text">
-             <string>BUSCAR</string>
-            </property>
-            <property name="icon">
-             <iconset resource="visuals/icons.qrc">
-              <normaloff>:/usedIcons/icons8-search-30.png</normaloff>:/usedIcons/icons8-search-30.png</iconset>
             </property>
            </widget>
           </item>
@@ -532,7 +532,7 @@ QTableWidget{
           <bool>true</bool>
          </property>
          <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
+          <set>QAbstractItemView::EditKeyPressed</set>
          </property>
          <property name="tabKeyNavigation">
           <bool>false</bool>
@@ -571,7 +571,7 @@ QTableWidget{
           <bool>false</bool>
          </property>
          <property name="columnCount">
-          <number>8</number>
+          <number>10</number>
          </property>
          <attribute name="horizontalHeaderVisible">
           <bool>true</bool>
@@ -583,7 +583,7 @@ QTableWidget{
           <number>190</number>
          </attribute>
          <attribute name="horizontalHeaderHighlightSections">
-          <bool>true</bool>
+          <bool>false</bool>
          </attribute>
          <attribute name="horizontalHeaderMinimumSectionSize">
           <number>190</number>
@@ -604,7 +604,7 @@ QTableWidget{
           <number>39</number>
          </attribute>
          <attribute name="verticalHeaderMinimumSectionSize">
-          <number>30</number>
+          <number>39</number>
          </attribute>
          <attribute name="verticalHeaderShowSortIndicator" stdset="0">
           <bool>false</bool>
@@ -717,7 +717,7 @@ QTableWidget{
          </column>
          <column>
           <property name="text">
-           <string>Tiempo extra</string>
+           <string>Hora de entrada</string>
           </property>
           <property name="font">
            <font>
@@ -748,7 +748,7 @@ QTableWidget{
          </column>
          <column>
           <property name="text">
-           <string>Hora de entrada</string>
+           <string>Hora estimada de salida</string>
           </property>
           <property name="font">
            <font>
@@ -842,6 +842,68 @@ QTableWidget{
          <column>
           <property name="text">
            <string>Cancelado</string>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>15</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="textAlignment">
+           <set>AlignCenter</set>
+          </property>
+          <property name="background">
+           <color>
+            <red>187</red>
+            <green>80</green>
+            <blue>35</blue>
+           </color>
+          </property>
+          <property name="foreground">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>255</red>
+             <green>255</green>
+             <blue>255</blue>
+            </color>
+           </brush>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Acudiente</string>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>15</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="textAlignment">
+           <set>AlignCenter</set>
+          </property>
+          <property name="background">
+           <color>
+            <red>187</red>
+            <green>80</green>
+            <blue>35</blue>
+           </color>
+          </property>
+          <property name="foreground">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>255</red>
+             <green>255</green>
+             <blue>255</blue>
+            </color>
+           </brush>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Acudiente-ID</string>
           </property>
           <property name="font">
            <font>
@@ -1006,6 +1068,22 @@ QTableWidget{
            </brush>
           </property>
          </item>
+         <item row="0" column="8">
+          <property name="text">
+           <string>Lina Fernandez</string>
+          </property>
+          <property name="textAlignment">
+           <set>AlignCenter</set>
+          </property>
+         </item>
+         <item row="0" column="9">
+          <property name="text">
+           <string>1004718953</string>
+          </property>
+          <property name="textAlignment">
+           <set>AlignJustify|AlignVCenter</set>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
@@ -1069,7 +1147,8 @@ QTableWidget{
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background:#ffffff;</string>
+           <string notr="true">background:#ffffff;
+color:#000000;</string>
           </property>
           <property name="text">
            <string>Total de personas</string>
@@ -1080,7 +1159,7 @@ QTableWidget{
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="putTotalTimeLabel">
+         <widget class="QLabel" name="putTotalPeopleLabel">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -1112,6 +1191,7 @@ QTableWidget{
     border-style: outset;
     background-color: #ffffff;
 	padding: 5 px;
+    color:#000000;
 }</string>
           </property>
           <property name="frameShape">
@@ -1264,7 +1344,8 @@ QPushButton:pressed {
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background:#ffffff;</string>
+           <string notr="true">background:#ffffff;
+color:#000000;</string>
           </property>
           <property name="text">
            <string>Dinero total</string>
@@ -1275,7 +1356,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="putTotalTimeLabel_2">
+         <widget class="QLabel" name="putTotalMoneyLabel">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -1307,6 +1388,7 @@ QPushButton:pressed {
     border-style: outset;
     background-color: #ffffff;
 	padding: 5 px;
+    color:#000000;
 }</string>
           </property>
           <property name="frameShape">
