adding load_users, refining register, and pending search. Also includes test folder

--- a/FRONTEND/views/QT_DESIGNS/designs/main.ui
+++ b/FRONTEND/views/QT_DESIGNS/designs/main.ui
@@ -150,7 +150,7 @@ color:#000000;
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="comboBox">
+           <widget class="QComboBox" name="searchRecordParametercomboBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
