--- a/FRONTEND/views/QT_DESIGNS/designs/register.ui
+++ b/FRONTEND/views/QT_DESIGNS/designs/register.ui
@@ -332,56 +332,6 @@ color:#000000;</string>
        <property name="verticalSpacing">
         <number>-1</number>
        </property>
-       <item row="2" column="1">
-        <widget class="QLineEdit" name="ParentIDLineEdit">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>130</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>130</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>17</pointsize>
-          </font>
-         </property>
-         <property name="toolTip">
-          <string>Total de personas</string>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background: #ffffff;
-border:2px rounded;
-border-radius: 10px;
-border-style: outset;
-border-color: rgb(57, 57, 57);
-color:#000000;</string>
-         </property>
-         <property name="frame">
-          <bool>false</bool>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-         <property name="readOnly">
-          <bool>false</bool>
-         </property>
-         <property name="placeholderText">
-          <string>Ej: La cedula</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="totalTimeLabel">
          <property name="sizePolicy">
@@ -416,6 +366,75 @@ color:#ffffff;</string>
          <property name="margin">
           <number>3</number>
          </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="totalTimeComboBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>130</width>
+           <height>22</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>210</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>17</pointsize>
+          </font>
+         </property>
+         <property name="mouseTracking">
+          <bool>true</bool>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background: #ffffff;
+border:2px rounded;
+border-radius: 6px;
+border-style: outset;
+border-color: rgb(57, 57, 57);
+color:#000000;</string>
+         </property>
+         <property name="currentText">
+          <string>Seleccione</string>
+         </property>
+         <property name="currentIndex">
+          <number>0</number>
+         </property>
+         <item>
+          <property name="text">
+           <string>Seleccione</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>New Item</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>New Item</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>New Item</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>New Item</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item row="1" column="0">
@@ -540,8 +559,8 @@ color:#ffffff;</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="totalTimeComboBox">
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="ParentIDLineEdit">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -551,13 +570,13 @@ color:#ffffff;</string>
          <property name="minimumSize">
           <size>
            <width>130</width>
-           <height>22</height>
+           <height>30</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>210</width>
-           <height>30</height>
+           <width>130</width>
+           <height>32</height>
           </size>
          </property>
          <property name="font">
@@ -565,48 +584,29 @@ color:#ffffff;</string>
            <pointsize>17</pointsize>
           </font>
          </property>
-         <property name="mouseTracking">
-          <bool>true</bool>
+         <property name="toolTip">
+          <string>Total de personas</string>
          </property>
          <property name="styleSheet">
           <string notr="true">background: #ffffff;
 border:2px rounded;
-border-radius: 6px;
+border-radius: 10px;
 border-style: outset;
 border-color: rgb(57, 57, 57);
 color:#000000;</string>
          </property>
-         <property name="currentText">
-          <string>Seleccione</string>
+         <property name="frame">
+          <bool>false</bool>
          </property>
-         <property name="currentIndex">
-          <number>0</number>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
-         <item>
-          <property name="text">
-           <string>Seleccione</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>New Item</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>New Item</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>New Item</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>New Item</string>
-          </property>
-         </item>
+         <property name="readOnly">
+          <bool>false</bool>
+         </property>
+         <property name="placeholderText">
+          <string>Ej: La cedula</string>
+         </property>
         </widget>
        </item>
        <item row="3" column="1">
@@ -832,18 +832,107 @@ color:#ffffff;</string>
          </item>
         </layout>
        </item>
-       <item row="2" column="1">
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+       <item row="2" column="0">
+        <widget class="QLabel" name="VipUserLabel">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
-         <property name="sizeHint" stdset="0">
+         <property name="minimumSize">
           <size>
-           <width>20</width>
-           <height>40</height>
+           <width>110</width>
+           <height>30</height>
           </size>
          </property>
-        </spacer>
+         <property name="font">
+          <font>
+           <pointsize>17</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background:rgb(80, 80, 80);
+color:#ffffff;</string>
+         </property>
+         <property name="text">
+          <string>Usuario VIP</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="margin">
+          <number>3</number>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <item>
+          <widget class="QRadioButton" name="YesVipUserRadioButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>17</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color:#000000;
+</string>
+           </property>
+           <property name="text">
+            <string>SI</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="checked">
+            <bool>false</bool>
+           </property>
+           <property name="autoRepeat">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="NoVipUserRadioButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>17</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color:#000000;
+</string>
+           </property>
+           <property name="text">
+            <string>NO</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="checked">
+            <bool>false</bool>
+           </property>
+           <property name="autoRepeat">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </item>
